<resources>
    <string name="app_name">Instance</string>
    <string name="app_read">InstanceRead</string>
    <string name="app_write">InstanceWrite</string>
    <string name="facebook_app_id">219199642342752</string>
    <string name="youtube_api_key">AIzaSyDp-vq0ek2F-nypbGpxHL0r-3opAN2I8oc</string>
    <string name="appbar_scrolling_view_behavior">Scrolling</string>
    <string name="sign_out">Log Out</string>
    <string name="btn_login">Log In</string>
    <string name="btn_forgot_password">Forgot?</string>
    <string name="btn_link_to_register">Register here</string>
    <string name="enter_your_mobile_number">Enter your mobile number to receive OTP</string>
    <string name="_91">+91</string>
    <string name="cont">Continue</string>
    <string name="wait_we_will_send_otp">Wait we will send OTP to your mobile number</string>
    <string name="otp_timer">00:00</string>
    <string name="resend_otp">Resend</string>
    <string name="change_number">Change number</string>
    <string name="we_will_try_to_auto_verify_if_not_enter_manually">Auto verification</string>
    <string name="verify">Verify</string>
    <string name="lbl_forgot_password">Fogot password?</string>
    <string name="forgot_password_msg">Forgot!?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_link_to_login">Log In Again</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="already_registered_login_here">Already Registered? login here</string>
    <string name="hint_password">Password</string>
    <string name="mobile">Mobile Number</string>
    <string name="otp">Enter OTP </string>
    <string name="hint_email">Email</string>
    <string name="email">Email</string>
    <string name="hint_name">Name</string>
    <string name="mobile_number_empty">Enter valid number</string>
    <string name="mobile_invalid">Invalid Number</string>
    <string name="enter_email">Enter Email to continue!</string>
    <string name="enter_name">Enter Name to continue!</string>
    <string name="choose_gender">Choose your Gender!</string>
    <string name="google_conn_failed">Google connection Failed</string>
    <string name="choose_email">Choose Email</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="we_will_try_to_auto_verify_if_not_entered_manually">We will try to auto verify your number, if not enter it manually</string>
    <string name="login_again">Login Me, I have account!</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="circular">Circular</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="loading">loading</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy</string>
    <string name="read_more">Read more…</string>
    <string name="function_not_set">Function Not Set!</string>
    <string name="press_again_to_exit">Press BACK again to exit!</string>
    <string name="collpasing_tool_bar_image">Collapsing Tool bar Image</string>
    <string name="end">*-*-*-*-*-*-*</string>
    <string name="requesting_otp">Requesting OTP…</string>
    <string name="verifying_otp">Verifying OTP…</string>
    <string name="registering_you">Registering your account…</string>
    <string name="some_error_occurred">Some Error Occurred, try again later!</string>
    <string name="no_internet_title">No Internet!</string>
    <string name="connect_to_n">Connect to an active network and try again!</string>
    <string name="retry">Retry</string>
    <string name="no_internt_conn">Internet connection unavailable!</string>
    <string name="otp_invalid">Enter valid OTP!</string>
    <string name="error_in_db_connection">Error in connecting database, try again after sometime!</string>
    <string name="cannot_create_account">Some error occurred while processing, try again later!</string>
    <string name="ok">OK</string>
    <string name="log_out_hint">Are you sure, you want to log out?</string>
    <string name="action_search">search</string>
    <string name="achivements">Achievements</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="clubs">Clubs</string>
    <string name="tech">Technical</string>
    <string name="non_tech">Non-tech</string>
    <string name="social">Social</string>
    <string name="sports">Sports</string>
    <string name="cultural">Cultural</string>
    <string name="general">General</string>
    <string name="update_profile">Update Profile</string>
    <string name="version">App Version</string>
    <string name="entertainment">Entertainment</string>
    <string name="search">Search</string>
    <string name="search_event">Search event…</string>
    <string name="search_ciruclar">Search Circular…</string>
    <string name="permission_message">App needs permission to run properly!</string>
    <string name="permission_title">Permission Needed.</string>
    <string name="permission">Permission</string>
    <string name="permission_hint">List of permissions needed by app to run smoothly.</string>
    <string name="i_agree">I Agree</string>
    <string name="location_title" translatable="false">LOCATION</string>
    <string name="phone_title" translatable="false">PHONE</string>
    <string name="contact_title" translatable="false">CONTACT</string>
    <string name="sms_title" translatable="false">SMS</string>
    <string name="storage_title" translatable="false">STORAGE</string>
    <string name="camera_title" translatable="false">CAMERA</string>
    <string name="phone_permsn_hint">This permission is needed to make your interaction with the app flawless, by checking your internet status.</string>
    <string name="sms_permsn_hint">Incase of OTP verification, you are not stressed by the app to read and enter the OTP again. By providing this permission, the app itself reads and verifies OTP automatically.</string>
    <string name="storage_permsn_hint">This allows you to upload or save images and videos which you can view later or share with your friends.</string>
    <string name="camera_permsn_hint">This allows you to open camera within app and take images and share them.</string>
    <string name="read" translatable="false">by reading</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="open_camera">Open camera</string>
    <string name="choose_operation">Choose an Operation!</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="app_photo">Add Photo by</string>
    <string name="hello_admin">Hello, Admin!</string>
    <string name="choose_your_updation">What do you want to update?</string>
    <string name="news_will_be_shown_in_newsfeed">News will be shown in newsfeed</string>
    <string name="create_a_news">Create a news</string>
    <string name="create_a_circular">Create a circular</string>
    <string name="it_will_be_shown_in_circular_tab">It will be shown in circular tab</string>
    <string name="add_team">Add Team</string>
    <string name="add_or_edit_team_information">Add or edit team information</string>
    <string name="manage_team">Manage Teams</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="update_team">Update Team</string>
    <string name="team_name">Team name</string>
    <string name="team_motto">Team Motto</string>
    <string name="team_logo">Team Logo</string>
    <string name="team_desc">Team Description</string>
    <string name="provide_team_logo">Provide Team Logo!</string>
    <string name="enter_team_name">Enter Team Name!</string>
    <string name="enter_team_motto">Enter Team Motto!</string>
    <string name="creating_team_profile">Creating team profile…</string>
    <string name="team_already_exist">Team info already exists!</string>
    <string name="team_added_successfully">Team Info added successfully!</string>
    <string name="db_error">Some Error occurred while creating, try again later!</string>
    <string name="validating_info">Validating informations…</string>
    <string name="choose_team">Choose team</string>
    <string name="update_news">Update News</string>
    <string name="add_news">Add News</string>
    <string name="manage_news">Manage News</string>
    <string name="publish">Publish</string>
    <string name="choose">Choose</string>
    <string name="event_name">Event name:</string>
    <string name="event_desc">Event description:</string>
    <string name="event_date">Event date:</string>
    <string name="event_time">Event time:</string>
    <string name="event_venue">Venue:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="event_poster">Poster:</string>
    <string name="video_url">Video Url:</string>
    <string name="news_visibility">News Visibility:</string>
    <string name="visible">Visible</string>
    <string name="hide">Hide</string>
    <string name="your_recently_updated_news">Your recently updated news</string>
    <string name="new_circular">New circular</string>
    <string name="manage_circulars">Manage circulars</string>
    <string name="circular_visiblity">Circular visibility:</string>
    <string name="circular_name">Circular title</string>
    <string name="circular_desc">Circular description:</string>
    <string name="circular_image">Image attachment:</string>
    <string name="your_recently_updated_circulars">Your recently updated circulars</string>
    <string name="name">Name</string>
    <string name="members_count">Members Count</string>
    <string name="team_members_names">Team Members Name</string>
    <string name="default_members_count">10</string>
    <string name="enter_team_count">Enter value for team members count!</string>
    <string name="enter_team_members_names">Enter team members names!</string>
    <string name="next">Next</string>
    <string name="permissoin_denied_string">Permissions to access camera or gallery was not available, go to app settings and enable all permissions</string>
    <string name="select_picture">Select Picture</string>
    <string name="position">Position</string>
    <string name="president">President</string>
    <string name="member">Member</string>
    <string name="vice_president">Vice President</string>
    <string name="member_name">Member Name</string>
    <string name="you_haven_t_updated_any_circulars">You haven\'t updated any circulars!</string>
    <string name="enter_details">Enter Details:</string>
    <string name="admin_mobile">Admin Mobile</string>
    <string name="admin_name">Admin Name</string>
    <string name="super_admin">Super Admin</string>
    <string name="editor">Editor</string>
    <string name="designation">Designation</string>
    <string name="circular_admin">Circular Admin</string>
    <string name="news_admin">News Admin</string>
    <string name="news_admin_">News Manager</string>
    <string name="circular_admin_">News Manager</string>
</resources>